@@ -2,10 +2,12 @@
 These commands query and modify OVS tunnel components.
 .
 .IP "\fBovs/route/add \fIip\fB/\fIplen\fB \fIoutput_bridge\fB \
-[\fIgw\fB] [pkt_mark=\fImark\fB] [src=\fIsrc_ip\fB]\fR"
+[\fIgw\fB] [pkt_mark=\fImark\fB] [src=\fIsrc_ip\fB] [table=\fIID\fB]\fR"
 Adds \fIip\fR/\fIplen\fR route to vswitchd routing table. \fIoutput_bridge\fR
 needs to be OVS bridge name.  This command is useful if OVS cached
-routes does not look right.
+routes does not look right. A non-standard table ID can be specified, in which
+case the route is added to that routing table. The table is created if it
+doesn't exist.
 .
 .IP "\fBovs/route/show [table=\fIID|all\fB]\fR"
 Print routes in OVS routing table. This includes routes cached
@@ -14,8 +16,10 @@ of the main routing table is displayed, unless requested otherwise with
 \fItable\fR parameter. In this case the contents of a specific table ID or of
 all routing tables is printed.
 .
-.IP "\fBovs/route/del ip/plen [pkt_mark=mark]\fR"
-Delete ip/plen route from OVS routing table.
+.IP "\fBovs/route/del ip/plen [pkt_mark=mark] [table=\fIID\fB]\fR"
+Delete ip/plen route from OVS routing table. The standard routing table is used
+by default, or a specific custom table when ID is provided via \fItable\fR
+parameter.
 .
 .IP "\fBovs/route/rule/show\fR"
 Print routing rules in OVS. This includes routing rules cached from the system
